package model.Terreno.Productor;

import model.Terreno.Terreno;

import java.util.ArrayList;
import java.util.List;

public abstract class Productor extends Terreno {

}
